QjackCtl - JACK Audio Connection Kit Qt GUI Interface
-----------------------------------------------------

ChangeLog

SVN TRUNK

- JACK version is now being shown on the About box.

- Slight Connections widget behavioral change: (dis)connecting a
  client (from) to one single port, (dis)connections will be
  applied in sequence from (to) all client output ports to (from)
  as many input ports there are in below, one by one (satisfying
  a 5 year old request from Yann Orlarey, thanks:).

- JACK session support is being introduced. (EXPERIMENTAL)

- Ignore first XRUN occurrence option dropped from statistics.

- Initial widget geometry and visibility persistence logic has
  been slightly revised as much to avoid crash failures due to
  wrong main widget hidden state.

- Double-quotes are now being added to device names which include
  blank characters and were rendering invalid all command line
  invocation of the classic JACK server (eg. specially due for
  Portaudio device names on Windows).
  
- Transport play (rolling) status is now being guarded to avoid
  backfiring from extraneous transport state changes.

- General source tree layout and build configuration change.

- Italian (it) translation added (by Sergio Atzori).

- Post-shutdown script invocation logic slightly refactored in
  attempt to enforce its execution on application quit.


0.3.6  2010-03-09  Full D-Busification!

- Make sure socket names are unique on each side of the Patchbay
  (another patch from Dominic Sacre, thanks).

- A bunch of primitive D-Bus interface slots have been added,
  allowing shortcut access to most of main applications actions
  like toggling Messages, Status, Connections, Patchbay widget
  pop-ups, reset stats, transport and so on. New bindings are
  given eg. via dbus-send --system / org.rncbc.qjackctl.(main, 
  messages, status, connections, patchbay, setup, about, reset,
  rewind, backward, play, pause, forward). (from an original